--- a/index.html
+++ b/index.html
@@ -17,10 +17,29 @@
       transition: background 0.5s, color 0.5s;
     }
 
+    .start-screen {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: #000;
+      color: #00ff88;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      z-index: 1000;
+      padding: 20px;
+    }
+
+    .start-screen button {
+      margin-top: 20px;
+    }
+
     .container {
       text-align: center;
       padding: 20px;
       max-width: 100%;
+      display: none;
     }
 
     .terminal {
@@ -88,7 +107,7 @@
       box-shadow: 0 0 10px #00ff88;
     }
 
-    .secret, .video, .chat-box {
+    .secret, .chat-box {
       margin-top: 30px;
     }
 
@@ -138,9 +157,14 @@
   </style>
 </head>
 <body>
-  <audio id="bg-music" src="bday.mp3" autoplay loop></audio>
+  <div class="start-screen" id="start-screen">
+    <h2>🎉 Ready for your birthday surprise, Karthi?</h2>
+    <button onclick="startExperience()">Start the Surprise</button>
+  </div>
 
-  <div class="container">
+  <audio id="bg-music" src="bday.mp3" loop></audio>
+
+  <div class="container" id="main-container">
     <div class="terminal">
       <p class="typed-text"></p>
       <span class="cursor">|</span>
@@ -155,7 +179,6 @@
         <div class="swiper-slide"><img src="1.jpg" alt="Memory 2"></div>
       </div>
     </div>
-
 
     <div class="chat-box">
       <div class="chat-msg">👨 : echo "Hello, Karthi! 🎂"</div>
@@ -177,11 +200,12 @@
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
-    const text = 'Hey Karthi 💫\n\nSurprise! 🎉\nThis little site is just for you,\nSwipe through the memories, enjoy the music, and smile — you deserve it all! ❤️ \n Wishing you a many more Happy Returns of the day!!!' ;
+    const text = `Hey Karthi 💫\n\nSurprise! 🎉\nThis little site is just for you,\nSwipe through the memories, enjoy the music, and smile — you deserve it all! ❤️\nWishing you many more Happy Returns of the Day!!!`;
     const typedText = document.querySelector(".typed-text");
     const music = document.getElementById("bg-music");
     const musicToggle = document.getElementById("music-toggle");
-    const themeToggle = document.getElementById("theme-toggle");
+    const container = document.getElementById("main-container");
+    const startScreen = document.getElementById("start-screen");
     let i = 0;
 
     function typeLine() {
@@ -192,7 +216,13 @@
       }
     }
 
-    typeLine();
+    function startExperience() {
+      startScreen.style.display = "none";
+      container.style.display = "block";
+      music.play();
+      confetti({ particleCount: 150, spread: 100, origin: { y: 0.6 } });
+      typeLine();
+    }
 
     musicToggle.addEventListener("click", () => {
       if (music.paused) {
@@ -204,22 +234,12 @@
       }
     });
 
-    themeToggle.addEventListener("click", () => {
-      document.body.classList.toggle("light-theme");
-      document.body.style.backgroundColor = document.body.classList.contains("light-theme") ? "#fff" : "#0f0f0f";
-      document.body.style.color = document.body.classList.contains("light-theme") ? "#000" : "#00ff88";
-    });
-
     const swiper = new Swiper(".mySwiper", {
       loop: true,
       pagination: {
         el: ".swiper-pagination",
       },
     });
-
-    window.onload = () => {
-      confetti({ particleCount: 150, spread: 100, origin: { y: 0.6 } });
-    };
   </script>
 </body>
 </html>
