--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -173,12 +174,16 @@
     <button id="music-toggle">🔇 Mute</button>
     <button onclick="document.getElementById('modal').style.display='flex'">😊 Read Letter</button>
 
-    <div class="swiper mySwiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="2.jpg" alt="Memory 1"></div>
-        <div class="swiper-slide"><img src="1.jpg" alt="Memory 2"></div>
-      </div>
-    </div>
+<div class="swiper mySwiper">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide"><img src="2.jpg" alt="Memory 1"></div>
+    <div class="swiper-slide"><img src="1.jpg" alt="Memory 2"></div>
+  </div>
+
+  <!-- Navigation buttons -->
+  <div class="swiper-button-next"></div>
+  <div class="swiper-button-prev"></div>
+</div>
 
     <div class="chat-box">
       <div class="chat-msg">👨 : echo "Hello, Karthi! 🎂"</div>
