--- a/index.html
+++ b/index.html
@@ -239,12 +239,14 @@
       }
     });
 
-    const swiper = new Swiper(".mySwiper", {
-      loop: true,
-      pagination: {
-        el: ".swiper-pagination",
-      },
-    });
+const swiper = new Swiper(".mySwiper", {
+  loop: true,
+  navigation: {
+    nextEl: ".swiper-button-next",
+    prevEl: ".swiper-button-prev",
+  },
+});
+
   </script>
 </body>
 </html>
