--- a/index.html
+++ b/index.html
@@ -151,6 +151,18 @@
       margin: 5px 0;
     }
 
+    .swiper-button-next,
+    .swiper-button-prev {
+    color: #00ff88;
+    transition: transform 0.3s ease;
+    }
+  
+    .swiper-button-next:hover,
+    .swiper-button-prev:hover {
+    transform: scale(1.2);
+    }
+
+
     @media screen and (max-width: 600px) {
       .typed-text { font-size: 1.2rem; }
       button { font-size: 0.9rem; padding: 8px 14px; }
